# frm-ds-to-ml

./: .dvcignore  .gitignore  .gitmodules  README.md  _quarto.yml  dvc.yaml  index.qmd  localize.py  params.yaml  pyproject.toml  train.py
.github/workflows/: ci.yml  deploy-pages.yml
configs/: localization.yaml
configs/failures/: calibration_error.yaml  corrupted_observations.yaml  delayed_observations.yaml  gps_drift.yaml
ipcv/: __init__.py  _modidx.py  _workflow_impl.py  evaluation.py  failures.py  geometry.py  image_processing.py  localization.py  localization_workflow.py  observability.py  service.py  workflow.py
lessons/: 00_course_setup.qmd  01_image_processing_toolkit.qmd  02_geometry_camera_systems.qmd  03_localization_state_estimation.qmd  03a_probability_statistics_state_estimation.qmd  04_production_architecture.qmd  05_failure_reliability.qmd  06_data_workflows.qmd  07_evaluation_observability.qmd  08_automation_local_skills.qmd  09_final_project.qmd  90_optional_segmentation_mlflow.qmd  91_mlops_companion.qmd
nbs/: 00_research_experiment.ipynb  01_collaboration_config_runner.ipynb  02_mlflow_tracking_registry.ipynb  03_ci_quality_gate.ipynb  04_advanced_mlflow_training.ipynb
scripts/: prepare_kalman_quarto.py  prepare_mlops_quarto.py
skills/calibration-checker/: SKILL.md
skills/course-project-architect/: SKILL.md
skills/course-project-architect/agents/: openai.yaml
skills/course-project-architect/references/: backend-api-specialization.md  git-specialization.md  ml-specialization.md  software-engineering-practices.md  teaching-arc.md
skills/course-project-architect/scripts/: scaffold_project.py  validate_project.py
skills/evaluation-report-generator/: SKILL.md
skills/localization-debugger/: SKILL.md
skills/regression-analyzer/: SKILL.md
tests/: test_geometry.py  test_image_processing.py  test_localization.py  test_service.py  test_workflow.py
