[project]
name = "ipcv"
version = "0.1.0"
description = "A minimal nbdev demo: semantic segmentation from notebook experiment to production ML workflow."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Abdelhamed Nour" }]
dependencies = [
    "dvc>=3.50",
    "mlflow>=2.14",
    "nbdev>=2.3.34",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "segmentation-models-pytorch>=0.3.4",
    "torch>=2.3",
    "torchvision>=0.18",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "jupyterlab-quarto>=0.3",
    "jupyterlab-rise>=0.43",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipcv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/abdelhamednour/ipcv"
Documentation = "https://abdelhamednour.github.io/ipcv/"

[tool.nbdev]
nbs_path = "nbs"
lib_path = "ipcv"
doc_path = "_docs"
tst_flags = "notest"
recursive = true
put_version_in_init = true
jupyter_hooks = true
clean_ids = true
branch = "main"
title = "ipcv"
update_pyproject = false
