[project]
name = "ipcv"
version = "0.1.0"
description = "Applied computer vision systems engineering course project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Abdelhamed Nour" }]
dependencies = [
    "dvc>=3.50",
    "matplotlib>=3.8",
    "mlflow>=2.14",
    "nbdev>=2.3.34",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.0",
    "jupyterlab-quarto>=0.3",
    "jupyterlab-rise>=0.43",
    "pytest>=8.2",
]
segmentation = [
    "segmentation-models-pytorch>=0.3.4",
    "torch>=2.3",
    "torchvision>=0.18",
]
service = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipcv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "segmentation: optional PyTorch segmentation workflow tests",
    "service: optional FastAPI service tests",
]

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/abdelhamednour/ipcv"
Documentation = "https://abdelhamednour.github.io/ipcv/"

[tool.nbdev]
nbs_path = "nbs"
lib_path = "ipcv"
doc_path = "_docs"
tst_flags = "notest"
recursive = true
put_version_in_init = true
jupyter_hooks = true
clean_ids = true
branch = "main"
title = "ipcv"
update_pyproject = false
